# dlms-cosem-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  fix_profile_generic.py  justfile  rust-toolchain.toml
examples/: README.md  async_basic_tokio.rs  basic_client.rs  tcp_hdlc_transport_async_embassy.rs  tcp_hdlc_transport_async_glommio.rs  tcp_hdlc_transport_async_smol.rs  tcp_hdlc_transport_async_tokio.rs  tcp_hdlc_transport_sync.rs  tcp_transport_async_embassy.rs  tcp_transport_async_glommio.rs  tcp_transport_async_smol.rs  tcp_transport_async_tokio.rs  tcp_transport_embassy_net_nostd.rs  tcp_transport_sync.rs
src/: action.rs  association.rs  client.rs  control_information.rs  cosem.rs  data.rs  data_notification.rs  ded_apdu.rs  general_glo_ciphering.rs  get.rs  getrandom_impl.rs  glo_apdu.rs  hdlc.rs  lib.rs  lib_tests.rs  mbus.rs  obis_code.rs  security_control.rs  selective_access.rs  selective_access.rs.orig  set.rs  transport.rs  unit.rs
src/association/: aare.rs  aarq.rs  ber.rs  conformance.rs  enums.rs  initiate.rs  mod.rs  rlre.rs  rlre.rs.orig  rlre.rs.rej  rlrq.rs
src/client/: async.rs  sync.rs
src/cosem/: clock.rs  data.rs  demand_register.rs  extended_register.rs  mod.rs  profile_generic.rs  register.rs
src/transport/: async.rs  hdlc.rs  sync.rs  tcp.rs
src/transport/hdlc/: async.rs  sync.rs
src/transport/tcp/: async.rs  async_embassy_net.rs  sync.rs
