[package]
name = "dlms_cosem"
version = "0.5.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A `no_std` library for parsing and encoding DLMS/COSEM messages with encryption support."
documentation = "https://docs.rs/dlms_cosem"
repository = "https://github.com/reitermarkus/dlms-cosem-rs"
homepage = "https://github.com/reitermarkus/dlms-cosem-rs"

[features]
default = ["std", "parse", "mbusparse", "hdlcparse"]
std = ["serde?/std", "nom?/std", "chrono?/std", "jiff?/std"]
parse = ["dep:nom"]  # Enable parsing/deserialization functionality (decoding DLMS messages)
encode = []  # Enable encoding/serialization functionality (building DLMS messages)
association = []  # Enable Association Layer (AARQ/AARE/RLRQ/RLRE)
cosem-objects = ["std", "encode"]  # Enable COSEM Object Model (Register, ProfileGeneric, Clock, etc.) - requires std and encode
client = ["encode", "parse", "association"]  # Enable DLMS Client functionality - requires encode, parse, and association
async-client = ["client"]  # Enable async DLMS Client functionality - requires client feature
tokio = ["async-client", "dep:tokio"]  # Enable Tokio runtime support for async client
tokio-uring = ["async-client", "dep:tokio-uring"]  # Enable tokio-uring runtime support for async client (Linux only, io_uring)
glommio = ["async-client", "dep:glommio"]  # Enable glommio runtime support for async client (Linux only, io_uring, thread-per-core)
smol = ["async-client", "dep:smol"]  # Enable smol runtime support for async client (lightweight async)
embassy = ["async-client", "dep:embassy-futures"]  # Enable embassy runtime support for async client (embedded async, no_std)
heapless-buffer = ["heapless"]  # Enable heapless buffer support for embedded systems (no_std compatible)
chrono-conversions = ["chrono"]  # Enable chrono interoperability (from_chrono methods work in no_std, now() requires std)
jiff-conversions = ["jiff"]  # Enable jiff interoperability (from_jiff methods work in no_std, now_jiff() requires std)

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
cipher = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
jiff = { version = "0.2", default-features = false, features = ["alloc"], optional = true }
derive-try-from-primitive = "1"
mbusparse = { version = "0.1", default-features = false, optional = true }
hdlcparse = { version = "2", default-features = false, optional = true }
nom = { version = "8", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
heapless = { version = "0.9", optional = true }

# Async dependencies
tokio = { version = "1", default-features = false, features = ["io-util", "net"], optional = true }
tokio-uring = { version = "0.5", optional = true }
glommio = { version = "0.9", optional = true }
smol = { version = "2", optional = true }
embassy-futures = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
smol = { version = "2", optional = false }
async-lock = "3.0"

[[example]]
name = "basic_client"
required-features = ["client"]

[[example]]
name = "async_basic_tokio"
required-features = ["async-client", "tokio"]
