[package]
name = "dlms_cosem"
version = "0.5.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A `no_std` library for parsing and encoding DLMS/COSEM messages with encryption support."
documentation = "https://docs.rs/dlms_cosem"
repository = "https://github.com/reitermarkus/dlms-cosem-rs"
homepage = "https://github.com/reitermarkus/dlms-cosem-rs"

[features]
default = ["std", "parse", "mbusparse", "hdlcparse"]
std = ["serde?/std", "nom?/std", "chrono?/std", "jiff?/std"]
parse = ["dep:nom"]  # Enable parsing/deserialization functionality (decoding DLMS messages)
encode = []  # Enable encoding/serialization functionality (building DLMS messages)
association = []  # Enable Association Layer (AARQ/AARE/RLRQ/RLRE)
cosem-objects = ["std", "encode"]  # Enable COSEM Object Model (Register, ProfileGeneric, Clock, etc.) - requires std and encode
client = ["encode", "parse", "association"]  # Enable DLMS Client functionality - requires encode, parse, and association
async-client = ["client"]  # Enable async DLMS Client functionality - requires client feature

# Getrandom configuration for embedded targets
# unsafe-rng: Enable UNSAFE PRNG for embedded testing/development (NOT for production!)
#             When disabled, you MUST provide your own getrandom_custom implementation
unsafe-rng = []

# Runtime category umbrella features - DO NOT enable directly, use specific runtime features below
# These are automatically enabled by the runtime-specific features and control trait bounds
rt-multi-thread = []  # Multi-threaded async runtimes (tasks can migrate between threads, requires Send)
rt-single-thread = []  # Single-threaded async runtimes (thread-per-core, tasks never migrate, !Send)

# Async runtime support
tokio = ["async-client", "rt-multi-thread", "dep:tokio"]  # Enable Tokio runtime support for async client
tokio-uring = ["async-client", "rt-multi-thread", "dep:tokio-uring"]  # Enable tokio-uring runtime support for async client (Linux only, io_uring)
glommio = ["async-client", "rt-single-thread", "dep:glommio", "dep:futures-lite"]  # Enable glommio runtime support for async client (Linux only, io_uring, thread-per-core)
smol = ["async-client", "rt-multi-thread", "dep:smol"]  # Enable smol runtime support for async client (lightweight async)
embassy = ["async-client", "rt-multi-thread", "dep:embassy-futures"]  # Enable embassy runtime support for async client (embedded async, std-compatible)
embassy-net = ["async-client", "rt-single-thread", "dep:embassy-net", "dep:embassy-time", "dep:embedded-io-async"]  # Enable embassy-net runtime support for async client (embedded async, single-threaded due to !Send socket, true no_std)

# Transport features (sync)
transport-tcp = ["std"]  # Enable synchronous TCP transport
transport-serial = ["std"]  # Enable synchronous serial transport (future)
transport-hdlc = []  # Enable HDLC framing wrapper (sync)

# Transport features (async)
transport-tcp-async = ["async-client", "std"]  # Enable async TCP transport (std-based)
transport-tcp-async-nostd = ["async-client"]  # Enable async TCP transport (embassy-net, no_std)
transport-serial-async = ["async-client", "transport-serial"]  # Enable async serial transport (future)
transport-hdlc-async = ["async-client", "transport-hdlc"]  # Enable HDLC framing wrapper (async)

# Convenience bundles
tokio-full = ["client", "tokio", "transport-tcp-async"]  # Tokio TCP client bundle
tokio-uring-full = ["client", "tokio-uring", "transport-tcp-async"]  # Tokio io_uring client bundle
glommio-full = ["client", "glommio", "transport-tcp-async"]  # Glommio client bundle
smol-full = ["client", "smol", "transport-tcp-async"]  # Smol client bundle
embassy-full = ["client", "embassy", "transport-tcp-async"]  # Embassy client bundle (std-compatible)
embassy-net-full = ["client", "embassy-net", "transport-tcp-async-nostd"]  # Embassy-net client bundle (true no_std)
sync-full = ["client", "transport-tcp", "transport-hdlc"]  # Sync client with all transports

# Other features
heapless-buffer = ["heapless"]  # Enable heapless buffer support for embedded systems (no_std compatible)
chrono-conversions = ["chrono"]  # Enable chrono interoperability (from_chrono methods work in no_std, now() requires std)
jiff-conversions = ["jiff"]  # Enable jiff interoperability (from_jiff methods work in no_std, now_jiff() requires std)

[dependencies]
# Encryption dependencies (always enabled - core DLMS feature)
aes = "0.8"
aes-gcm = "0.10"
cipher = "0.4"

chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
jiff = { version = "0.2", default-features = false, features = ["alloc"], optional = true }
derive-try-from-primitive = "1"
mbusparse = { version = "0.1", default-features = false, optional = true }
hdlcparse = { version = "2", default-features = false, optional = true }
nom = { version = "8", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
heapless = { version = "0.9", optional = true }

# Async dependencies
tokio = { version = "1", default-features = false, features = ["io-util", "net", "time"], optional = true }
tokio-uring = { version = "0.5", optional = true }
glommio = { version = "0.9", optional = true }
futures-lite = { version = "2", optional = true }
smol = { version = "2", optional = true }
embassy-futures = { version = "0.1", optional = true }
embassy-net = { version = "0.7", default-features = false, features = ["tcp", "proto-ipv4", "medium-ethernet"], optional = true }
embassy-time = { version = "0.5", default-features = false, optional = true }
embedded-io-async = { version = "0.6", optional = true } # Version forced by embassy-net

# Getrandom support for encryption (required by aes-gcm)
# Host targets: Use OS-provided RNG
[target.'cfg(not(target_os = "none"))'.dependencies]
getrandom = { version = "0.2" }

# Embedded bare-metal targets: Custom RNG implementation required
# The 'unsafe-rng' feature enables a PRNG for testing (NOT cryptographically secure)
# For production: Disable 'unsafe-rng' and provide your own getrandom_custom with hardware RNG
[target.'cfg(target_os = "none")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
smol = { version = "2", optional = false }
glommio = { version = "0.9", optional = false }
futures-executor = "0.3"

[[example]]
name = "basic_client"
required-features = ["client"]

[[example]]
name = "async_basic_tokio"
required-features = ["async-client", "tokio"]

[[example]]
name = "tcp_transport_sync"
required-features = ["client", "transport-tcp"]

[[example]]
name = "tcp_hdlc_transport_sync"
required-features = ["client", "transport-tcp", "transport-hdlc"]

[[example]]
name = "tcp_transport_async_tokio"
required-features = ["async-client", "transport-tcp-async", "tokio"]

[[example]]
name = "tcp_transport_async_smol"
required-features = ["async-client", "transport-tcp-async", "smol"]

[[example]]
name = "tcp_hdlc_transport_async_tokio"
required-features = ["async-client", "transport-tcp-async", "transport-hdlc-async", "tokio"]

[[example]]
name = "tcp_hdlc_transport_async_smol"
required-features = ["async-client", "transport-tcp-async", "transport-hdlc-async", "smol"]

[[example]]
name = "tcp_transport_async_glommio"
required-features = ["async-client", "transport-tcp-async", "glommio"]

[[example]]
name = "tcp_transport_async_embassy"
required-features = ["async-client", "transport-tcp-async", "embassy"]

[[example]]
name = "tcp_hdlc_transport_async_glommio"
required-features = ["async-client", "transport-tcp-async", "transport-hdlc-async", "glommio"]

[[example]]
name = "tcp_hdlc_transport_async_embassy"
required-features = ["async-client", "transport-tcp-async", "transport-hdlc-async", "embassy"]

[[example]]
name = "tcp_transport_embassy_net_nostd"
required-features = ["async-client", "transport-tcp-async", "embassy-net"]
